packages/ivr-migration-transformer/src/trsx/generated/TRSXParser.ts
/*
 * MIT No Attribution
 *
 * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of
 * this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to
 * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
 * the Software, and to permit persons to whom the Software is furnished to do so.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
 * FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
 * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */


import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { TRSXParserListener } from "./TRSXParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class TRSXParser extends antlr.Parser {
    public static readonly XMLDeclOpen = 1;
    public static readonly COMMENT = 2;
    public static readonly CDATA = 3;
    public static readonly DTD = 4;
    public static readonly OPEN = 5;
    public static readonly OPEN_SLASH = 6;
    public static readonly TEXT = 7;
    public static readonly WS = 8;
    public static readonly EntityRef = 9;
    public static readonly CharRef = 10;
    public static readonly SPECIAL_CLOSE = 11;
    public static readonly CLOSE = 12;
    public static readonly CLOSE_SLASH = 13;
    public static readonly EQUALS = 14;
    public static readonly S = 15;
    public static readonly ENCODING = 16;
    public static readonly STANDALONE = 17;
    public static readonly XMLNS = 18;
    public static readonly XMLNS_NUANCE = 19;
    public static readonly XML_LANG = 20;
    public static readonly NUANCE_VERSION = 21;
    public static readonly NUANCE_ENGINE_PACK_VERSION = 22;
    public static readonly PROJECT = 23;
    public static readonly METADATA = 24;
    public static readonly ENTRY = 25;
    public static readonly SOURCES = 26;
    public static readonly SOURCE = 27;
    public static readonly ONTOLOGY = 28;
    public static readonly INTENTS = 29;
    public static readonly INTENT = 30;
    public static readonly LINKS = 31;
    public static readonly LINK = 32;
    public static readonly CONCEPTS = 33;
    public static readonly CONCEPT = 34;
    public static readonly SETTINGS = 35;
    public static readonly SETTING = 36;
    public static readonly RELATIONS = 37;
    public static readonly RELATION = 38;
    public static readonly DICTIONARIES = 39;
    public static readonly DICTIONARY = 40;
    public static readonly SAMPLES = 41;
    public static readonly SAMPLE = 42;
    public static readonly ANNOTATION = 43;
    public static readonly SOURCEREF = 44;
    public static readonly VERSION = 45;
    public static readonly KEY = 46;
    public static readonly BASE = 47;
    public static readonly NAME_ATTR = 48;
    public static readonly FREETEXT = 49;
    public static readonly CONCEPTREF = 50;
    public static readonly INTENTREF = 51;
    public static readonly COUNT = 52;
    public static readonly LITERAL = 53;
    public static readonly VALUE = 54;
    public static readonly PROTECTED = 55;
    public static readonly DESCRIPTION = 56;
    public static readonly EXCLUDED = 57;
    public static readonly FULLY_VERIFIED = 58;
    public static readonly DATATYPE = 59;
    public static readonly DYNAMIC = 60;
    public static readonly RULE_GRAMMAR_FILE = 61;
    public static readonly TYPE = 62;
    public static readonly SOURCE_DISPLAY_NAME = 63;
    public static readonly SOURCE_URI = 64;
    public static readonly SOURCE_USE_FOR_OOV = 65;
    public static readonly PREFIXED_NAME = 66;
    public static readonly NAME = 67;
    public static readonly ATTVALUE_WS = 68;
    public static readonly STRING = 69;
    public static readonly RULE_unexpectedToken = 0;
    public static readonly RULE_document = 1;
    public static readonly RULE_xmlDecl = 2;
    public static readonly RULE_xmlDeclAttrs = 3;
    public static readonly RULE_xmlDeclAttr = 4;
    public static readonly RULE_versionAttr = 5;
    public static readonly RULE_encodingAttr = 6;
    public static readonly RULE_standaloneAttr = 7;
    public static readonly RULE_nameAttr = 8;
    public static readonly RULE_sourcerefAttr = 9;
    public static readonly RULE_conceptrefAttr = 10;
    public static readonly RULE_project = 11;
    public static readonly RULE_projectElements = 12;
    public static readonly RULE_projectAttrs = 13;
    public static readonly RULE_xmlnsAttr = 14;
    public static readonly RULE_xmlnsNuanceAttr = 15;
    public static readonly RULE_xmlLangAttr = 16;
    public static readonly RULE_nuanceVersionAttr = 17;
    public static readonly RULE_nuanceEnginePackVersionAttr = 18;
    public static readonly RULE_metadata = 19;
    public static readonly RULE_entry = 20;
    public static readonly RULE_entryContent = 21;
    public static readonly RULE_entryAttrs = 22;
    public static readonly RULE_keyAttr = 23;
    public static readonly RULE_sources = 24;
    public static readonly RULE_source = 25;
    public static readonly RULE_sourceAttrs = 26;
    public static readonly RULE_sourceDisplayNameAttr = 27;
    public static readonly RULE_sourceUriAttr = 28;
    public static readonly RULE_sourceVersionAttr = 29;
    public static readonly RULE_sourceUseForOOVAttr = 30;
    public static readonly RULE_ontology = 31;
    public static readonly RULE_ontologyAttrs = 32;
    public static readonly RULE_baseAttr = 33;
    public static readonly RULE_intents = 34;
    public static readonly RULE_intent = 35;
    public static readonly RULE_intentAttrs = 36;
    public static readonly RULE_links = 37;
    public static readonly RULE_link = 38;
    public static readonly RULE_linkAttrs = 39;
    public static readonly RULE_concepts = 40;
    public static readonly RULE_concept = 41;
    public static readonly RULE_conceptElements = 42;
    public static readonly RULE_conceptAttrs = 43;
    public static readonly RULE_dataTypeAttr = 44;
    public static readonly RULE_freetextAttr = 45;
    public static readonly RULE_dynamicAttr = 46;
    public static readonly RULE_ruleGrammarFileNameAttr = 47;
    public static readonly RULE_settings = 48;
    public static readonly RULE_setting = 49;
    public static readonly RULE_settingAttrs = 50;
    public static readonly RULE_relations = 51;
    public static readonly RULE_relation = 52;
    public static readonly RULE_relationAttrs = 53;
    public static readonly RULE_typeAttr = 54;
    public static readonly RULE_dictionaries = 55;
    public static readonly RULE_dictionary = 56;
    public static readonly RULE_dictionaryAttrs = 57;
    public static readonly RULE_dictionaryEntry = 58;
    public static readonly RULE_dictionaryEntryAttrs = 59;
    public static readonly RULE_literalAttr = 60;
    public static readonly RULE_valueAttr = 61;
    public static readonly RULE_protectedAttr = 62;
    public static readonly RULE_samples = 63;
    public static readonly RULE_sample = 64;
    public static readonly RULE_sampleAttrs = 65;
    public static readonly RULE_descriptionAttr = 66;
    public static readonly RULE_countAttr = 67;
    public static readonly RULE_intentrefAttr = 68;
    public static readonly RULE_excludedAttr = 69;
    public static readonly RULE_fullyVerifiedAttr = 70;
    public static readonly RULE_annotation = 71;
    public static readonly RULE_annotationContent = 72;
    public static readonly RULE_annotationAttrs = 73;

    public static readonly literalNames = [
        null, "'<?xml'", null, null, null, "'<'", "'</'", null, null, null, 
        null, "'?>'", "'>'", "'/>'", "'='", null, "'encoding'", "'standalone'", 
        "'xmlns'", "'xmlns:nuance'", "'xml:lang'", "'nuance:version'", "'nuance:enginePackVersion'", 
        "'project'", "'metadata'", "'entry'", "'sources'", "'source'", "'ontology'", 
        "'intents'", "'intent'", "'links'", "'link'", "'concepts'", "'concept'", 
        "'settings'", "'setting'", "'relations'", "'relation'", "'dictionaries'", 
        "'dictionary'", "'samples'", "'sample'", "'annotation'", "'sourceref'", 
        "'version'", "'key'", "'base'", "'name'", "'freetext'", "'conceptref'", 
        "'intentref'", "'count'", "'literal'", "'value'", "'protected'", 
        "'description'", "'excluded'", "'fullyVerified'", "'dataType'", 
        "'dynamic'", "'ruleGrammarFileName'", "'type'", "'displayName'", 
        "'uri'", "'useForOOV'"
    ];

    public static readonly symbolicNames = [
        null, "XMLDeclOpen", "COMMENT", "CDATA", "DTD", "OPEN", "OPEN_SLASH", 
        "TEXT", "WS", "EntityRef", "CharRef", "SPECIAL_CLOSE", "CLOSE", 
        "CLOSE_SLASH", "EQUALS", "S", "ENCODING", "STANDALONE", "XMLNS", 
        "XMLNS_NUANCE", "XML_LANG", "NUANCE_VERSION", "NUANCE_ENGINE_PACK_VERSION", 
        "PROJECT", "METADATA", "ENTRY", "SOURCES", "SOURCE", "ONTOLOGY", 
        "INTENTS", "INTENT", "LINKS", "LINK", "CONCEPTS", "CONCEPT", "SETTINGS", 
        "SETTING", "RELATIONS", "RELATION", "DICTIONARIES", "DICTIONARY", 
        "SAMPLES", "SAMPLE", "ANNOTATION", "SOURCEREF", "VERSION", "KEY", 
        "BASE", "NAME_ATTR", "FREETEXT", "CONCEPTREF", "INTENTREF", "COUNT", 
        "LITERAL", "VALUE", "PROTECTED", "DESCRIPTION", "EXCLUDED", "FULLY_VERIFIED", 
        "DATATYPE", "DYNAMIC", "RULE_GRAMMAR_FILE", "TYPE", "SOURCE_DISPLAY_NAME", 
        "SOURCE_URI", "SOURCE_USE_FOR_OOV", "PREFIXED_NAME", "NAME", "ATTVALUE_WS", 
        "STRING"
    ];
    public static readonly ruleNames = [
        "unexpectedToken", "document", "xmlDecl", "xmlDeclAttrs", "xmlDeclAttr", 
        "versionAttr", "encodingAttr", "standaloneAttr", "nameAttr", "sourcerefAttr", 
        "conceptrefAttr", "project", "projectElements", "projectAttrs", 
        "xmlnsAttr", "xmlnsNuanceAttr", "xmlLangAttr", "nuanceVersionAttr", 
        "nuanceEnginePackVersionAttr", "metadata", "entry", "entryContent", 
        "entryAttrs", "keyAttr", "sources", "source", "sourceAttrs", "sourceDisplayNameAttr", 
        "sourceUriAttr", "sourceVersionAttr", "sourceUseForOOVAttr", "ontology", 
        "ontologyAttrs", "baseAttr", "intents", "intent", "intentAttrs", 
        "links", "link", "linkAttrs", "concepts", "concept", "conceptElements", 
        "conceptAttrs", "dataTypeAttr", "freetextAttr", "dynamicAttr", "ruleGrammarFileNameAttr", 
        "settings", "setting", "settingAttrs", "relations", "relation", 
        "relationAttrs", "typeAttr", "dictionaries", "dictionary", "dictionaryAttrs", 
        "dictionaryEntry", "dictionaryEntryAttrs", "literalAttr", "valueAttr", 
        "protectedAttr", "samples", "sample", "sampleAttrs", "descriptionAttr", 
        "countAttr", "intentrefAttr", "excludedAttr", "fullyVerifiedAttr", 
        "annotation", "annotationContent", "annotationAttrs",
    ];

    public get grammarFileName(): string { return "TRSXParser.g4"; }
    public get literalNames(): (string | null)[] { return TRSXParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return TRSXParser.symbolicNames; }
    public get ruleNames(): string[] { return TRSXParser.ruleNames; }
    public get serializedATN(): number[] { return TRSXParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, TRSXParser._ATN, TRSXParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public unexpectedToken(): UnexpectedTokenContext {
        let localContext = new UnexpectedTokenContext(this.context, this.state);
        this.enterRule(localContext, 0, TRSXParser.RULE_unexpectedToken);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 148;
            this.matchWildcard();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public document(): DocumentContext {
        let localContext = new DocumentContext(this.context, this.state);
        this.enterRule(localContext, 2, TRSXParser.RULE_document);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 151;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 150;
                this.xmlDecl();
                }
            }

            this.state = 153;
            this.project();
            this.state = 154;
            this.match(TRSXParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public xmlDecl(): XmlDeclContext {
        let localContext = new XmlDeclContext(this.context, this.state);
        this.enterRule(localContext, 4, TRSXParser.RULE_xmlDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 156;
            this.match(TRSXParser.XMLDeclOpen);
            this.state = 157;
            this.xmlDeclAttrs();
            this.state = 158;
            this.match(TRSXParser.SPECIAL_CLOSE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public xmlDeclAttrs(): XmlDeclAttrsContext {
        let localContext = new XmlDeclAttrsContext(this.context, this.state);
        this.enterRule(localContext, 6, TRSXParser.RULE_xmlDeclAttrs);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 161;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 160;
                this.xmlDeclAttr();
                }
                }
                this.state = 163;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (((((_la - 16)) & ~0x1F) === 0 && ((1 << (_la - 16)) & 536870915) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public xmlDeclAttr(): XmlDeclAttrContext {
        let localContext = new XmlDeclAttrContext(this.context, this.state);
        this.enterRule(localContext, 8, TRSXParser.RULE_xmlDeclAttr);
        try {
            this.state = 168;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case TRSXParser.VERSION:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 165;
                this.versionAttr();
                }
                break;
            case TRSXParser.ENCODING:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 166;
                this.encodingAttr();
                }
                break;
            case TRSXParser.STANDALONE:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 167;
                this.standaloneAttr();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public versionAttr(): VersionAttrContext {
        let localContext = new VersionAttrContext(this.context, this.state);
        this.enterRule(localContext, 10, TRSXParser.RULE_versionAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(TRSXParser.VERSION);
            this.state = 171;
            this.match(TRSXParser.EQUALS);
            this.state = 172;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public encodingAttr(): EncodingAttrContext {
        let localContext = new EncodingAttrContext(this.context, this.state);
        this.enterRule(localContext, 12, TRSXParser.RULE_encodingAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 174;
            this.match(TRSXParser.ENCODING);
            this.state = 175;
            this.match(TRSXParser.EQUALS);
            this.state = 176;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public standaloneAttr(): StandaloneAttrContext {
        let localContext = new StandaloneAttrContext(this.context, this.state);
        this.enterRule(localContext, 14, TRSXParser.RULE_standaloneAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 178;
            this.match(TRSXParser.STANDALONE);
            this.state = 179;
            this.match(TRSXParser.EQUALS);
            this.state = 180;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public nameAttr(): NameAttrContext {
        let localContext = new NameAttrContext(this.context, this.state);
        this.enterRule(localContext, 16, TRSXParser.RULE_nameAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 182;
            this.match(TRSXParser.NAME_ATTR);
            this.state = 183;
            this.match(TRSXParser.EQUALS);
            this.state = 184;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sourcerefAttr(): SourcerefAttrContext {
        let localContext = new SourcerefAttrContext(this.context, this.state);
        this.enterRule(localContext, 18, TRSXParser.RULE_sourcerefAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 186;
            this.match(TRSXParser.SOURCEREF);
            this.state = 187;
            this.match(TRSXParser.EQUALS);
            this.state = 188;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conceptrefAttr(): ConceptrefAttrContext {
        let localContext = new ConceptrefAttrContext(this.context, this.state);
        this.enterRule(localContext, 20, TRSXParser.RULE_conceptrefAttr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 190;
            this.match(TRSXParser.CONCEPTREF);
            this.state = 191;
            this.match(TRSXParser.EQUALS);
            this.state = 192;
            this.match(TRSXParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public project(): ProjectContext {
        let localContext = new ProjectContext(this.context, this.state);
        this.enterRule(localContext, 22, TRSXParser.RULE_project);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 194;
            this.match(TRSXParser.OPEN);
            this.state = 195;
            this.match(TRSXParser.PROJECT);
            this.state = 199;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 196;
                    this.match(TRSXParser.S);
                    }
                    }
                }
                this.state = 201;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            this.state = 205;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 8126464) !== 0)) {
                {
                {
                this.state = 202;
                this.projectAttrs();
                }
                }
                this.state = 207;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 211;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 15) {
                {
                {
                this.state = 208;
                this.match(TRSXParser.S);
                }
                }
                this.state = 213;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 214;
            this.match(TRSXParser.CLOSE);
            this.state = 218;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 215;
                this.projectElements();
                }
                }
                this.state = 220;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 221;
            this.match(TRSXParser.OPEN_SLASH);
            this.state = 222;
            this.match(TRSXParser.PROJECT);
            this.state = 223;
            this.match(TRSXParser.CLOSE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public projectElements(): ProjectElementsContext {
        let localContext = new ProjectElementsContext(this.context, this.state);
        this.enterRule(localContext, 24, TRSXParser.RULE_projectElements);
        try {
            this.state = 230;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 225;
                this.metadata();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 226;
                this.sources();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 227;
                this.ontology();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 228;
                this.dictionaries();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 229;
                this.samples();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
